# xl_borders

./: .gitignore  LICENSE  README.md  pyproject.toml
Document/: Todo.md
Test/: test_borders.py
src/xl_borders/: __init__.py  borders.py
