[project]
name = "xl-borders"
version = "0.1.0"
description = "A Python library to build Excel cell borders with simple range syntax, like VBA"
readme = "README.md"
authors = [
    { name = "Wei Jie", email = "jieztee@gmail.com" }
]
license = {text = "MIT"}
requires-python = ">=3.13"
dependencies = [
    "openpyxl>=3.1.5",
]

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
testpaths = ["Test"]
